# financial_stress_engine

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: api-ci.yml  ci.yml  deploy-pages.yml  post-deploy-smoke.yml
app/: main.py
app/api/: routes.py
app/assumptions/: v1.yaml  v2.yaml
app/core/: config.py
app/engines/: deterministic.py  monte_carlo.py
app/models/: inputs.py
app/templates/: index.html  results.html
apps/web/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
docs/: CHANGELOG.md  MOD-001_DETERMINISTIC_ENGINE_SPEC.md  MOD-002_MONTE_CARLO_SPEC.md  MOD-003_FX_MULTI_CURRENCY_SPEC.md  POC_DEVELOPMENT_PLAN.md  POC_NEXT_STEPS.md  assumptions.md  brd_implementation_plan.md  data_refresh.md  decision_log.md  deployment_runbook.md  evidence_pack.md  methodology_textbook.md  model_development_document.md  poc_flyer.md  privacy.md  progress_log.md  proprietary_license_and_terms.md  regulatory_disclaimer.md  system_architecture_instructions.md
docs/MOD/: MOD-001_F-01_GUIDED_ONBOARDING_WIZARD.md  MOD-002_F-02_MONTH_BY_MONTH_RUNWAY_CHART.md  MOD-003_F-03_MORTGAGE_RATE_STRESS_MODULE.md  MOD-004_F-04_SCENARIO_COMPARISON.md  MOD-005_F-05_MONTE_CARLO_FAN_CHART.md  MOD-006_F-06_PDF_EXPORT.md  MOD-007_F-07_FX_AND_MULTI_CURRENCY.md  MOD-008_F-08_CATEGORY_INFLATION_TOGGLES.md  MOD-009_F-09_INTERACTIVE_SLIDERS.md  MOD-010_F-10_EMERGENCY_FUND_ADEQUACY_INDICATOR.md  (+17 more)
shared/engine/: fx.py  (+12 more)
tests/: test_api_endpoints.py  test_deterministic_engine.py  test_monte_carlo_engine.py
(+136 files in other folders)
